# csc2026

./: .gitignore
.github/workflows/: parallel-analysis-and-merge.yml
benchmarks/: bench_particle.cpp
docs/exercises/: sd_e1_parallel.md  sd_e2_bench_optimize.md  tt_e1_debugging.md  tt_e2_docs_ci.md
exercises/SD-E1-parallel-event-processing/starter/: CMakeLists.txt
exercises/SD-E2-benchmark-and-optimize/starter/: CMakeLists.txt
exercises/SD-E2-benchmark-and-optimize/starter/include/: ParticleLayouts.hpp
exercises/SD-E2-benchmark-and-optimize/starter/src/: bench_layout.cpp
exercises/TT-E1-debugging-sanitizers/starter/: CMakeLists.txt
exercises/TT-E1-debugging-sanitizers/starter/src/: TrackReconstructor.cpp
exercises/TT-E2-docs-and-ci/: README.md
exercises/TT-E2-docs-and-ci/ci-parallel-root/: README.md  data.csv  gamma-gamma-analysis-v1.py  mc.csv  root-to-png.py
exercises/TT-E2-docs-and-ci/ci-parallel-root/plots/: histogram_data_A.GamGam.root  histogram_data_B.GamGam.root  histogram_data_C.GamGam.root  histogram_data_D.GamGam.root  merged_histograms_data.root
tests/: test_event_processor.cpp
